allowed two hosts